TC-341: fix gap appearing between buttons and hero image

--- a/source/_patterns/03-organisms/sections/hero-icon-nav/_hero-icon-nav.scss
+++ b/source/_patterns/03-organisms/sections/hero-icon-nav/_hero-icon-nav.scss
@@ -47,7 +47,7 @@
       height: 15rem;
     }
     @include at-media("tablet-lg") {
-      width: 49%;
+      width: 49.4%;
     }
 
     .usa-card__container {
